--- a/views/front/set/pro.ejs
+++ b/views/front/set/pro.ejs
@@ -5,15 +5,7 @@
    
     <div class="main_content">
         <div class="mcontainer">
-
-            <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> <a href="/pro">Profil Bilgileri</a> <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
-            </span>
-            <hr style="margin-top: 22px;">
-            <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> <a href="/hes">Hesap Bilgileri</a> <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
-            </span>
-            <!-- <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Profil Bilgileri</h2>
+            <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Profil Bilgileri</h2>
             <div class="profile_avatar_holder image-upload">
                 <label for="file-input">
 
@@ -43,25 +35,6 @@
             <div class="icon_change_photo" hidden>
                 <ion-icon name="camera" class="text-xl"></ion-icon>
             </div>
-            <hr style="margin-top: 22px; border: 2px solid darkgray;">
-
-            <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Hesap Ayarları</h2>
-            <span class="badge">
-                <label style="padding-left: 20px; padding-top: 10px;">Kullanıcı Adı</label>
-                <input type="text" class="uk-input" placeholder="@ornek">
-            </span>
-            <hr>
-            <span class="badge">
-                <label style="padding-left: 20px; padding-top: 10px;">Mail Adresi</label>
-                <input type="text" class="uk-input" placeholder="example@ornek.com">
-            </span>
-            <hr>
-            <span class="badge">
-                <label style="padding-left: 20px; padding-top: 10px;">Telefon</label>
-                <input type="text" class="uk-input" placeholder="- --- -- --">
-            </span>
-            <hr>
-            <hr style="margin-top: 22px; border: 2px solid darkgray;"> -->
 
         </div>
     </div>
