--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -47,14 +47,13 @@
                                                         <table>
                                                             <tr>
                                                                 <td>
-                                                                    <img src="../../../front/images/avatars/avatar-8.jpg"
+                                                                    <img src="<%= element.user.photo %>"
                                                                         style="border-radius: 75px; height: 45px; width: 45px;">
-
                                                                 </td>
                                                                 <td>
-                                                                    <h3
+                                                                    <!-- <h3
                                                                         style=" text-align: right;">
-                                                                        Abdullah</h3>
+                                                                        Abdullah</h3> -->
 
                                                                 </td>
                                                             </tr>
