--- a/views/front/set/setting.ejs
+++ b/views/front/set/setting.ejs
@@ -14,7 +14,7 @@
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Erişebilirlik <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> <a href="/eris">Erişebilirlik</a> <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
@@ -22,7 +22,7 @@
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> İstatistik <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> <a href="/ista">İstatistik</a> <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
