--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -36,46 +36,21 @@
                         </div>
                     </div>
                     <div class="p-4 space-y-3">
+                        
                         <div class=" py-4 space-y-4 dark:border-" style="width: 100%;">
                             <% konu.comment.forEach(element=> { %>
-                                <div class="profiles_content" style="padding-top: 25px;">
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                <div class="profile_avatar">
-                                                    <div class="profile_avatar_holder">
-                                                        <table>
-                                                            <tr>
-                                                                <td>
-                                                                    <img src="<%= element.user.photo %>"
-                                                                        style="border-radius: 75px; height: 45px; width: 45px;">
-                                                                </td>
-                                                                <td>
-                                                                    <!-- <h3
-                                                                        style=" text-align: right;">
-                                                                        Abdullah</h3> -->
-
-                                                                </td>
-                                                            </tr>
-                                                        </table>
-                                                    </div>
-                                                    <div class="user_status status_online"></div>
-                                                    <div class="icon_change_photo" hidden>
-                                                        <ion-icon name="camera" class="text-xl"></ion-icon>
-                                                    </div>
-                                                </div>
-                                            </td>
-                                            <td style="width: 45vw;">
-                                                <h3 class="text-lg font-semibold"
-                                                    style=" text-align: right;"> <ion-icon style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline"></ion-icon> | <span style="color: crimson;">ABONE OL</span> 
-                                                </h3>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <br>
+                                <div style="display: flex; flex-direction: row;">
+                                    <div style="flex:8"><img src="https://via.placeholder.com/100"
+                                        style="border-radius: 75px; height: 45px; width: 45px;"></div>
+                                    <div style="flex:4">
+                                        <h3 class="text-lg font-semibold"
+                                            style=" text-align: right;"> <ion-icon style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline"></ion-icon> | <span style="color: crimson;">ABONE OL</span> 
+                                        </h3>
+                                    </div>
                                 </div>
                                 <div class="flex">
                                     <div>
+                                        <br>
                                         <p class="leading-6"
                                             style="font-size: 15pt; margin-left: -3vw; margin-right: -3vw;">
                                             <%= element.yorum %>
@@ -91,26 +66,26 @@
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon name="logo-whatsapp" style="padding-left: 6vw;" class="text-2xl"></ion-icon>
+                                                            <ion-icon name="logo-whatsapp" style="padding-left: 9vw;" class="text-2xl"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon name="logo-twitter" style="padding-left: 6vw;" class="text-2xl"></ion-icon>
+                                                            <ion-icon name="logo-twitter" style="padding-left: 9vw;" class="text-2xl"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 6vw;" class="text-2xl"
+                                                            <ion-icon style="padding-left: 9vw;" class="text-2xl"
                                                                 name="heart-outline"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 6vw;" class="text-2xl" name="chatbubble-ellipses-outline"></ion-icon>
+                                                            <ion-icon style="padding-left: 9vw;" class="text-2xl" name="chatbubble-ellipses-outline"></ion-icon>
 
                                                             <span class="text-sm"></span>
                                                         </div>
@@ -118,7 +93,7 @@
                                                     <td>
                                                         <div class="flex items-center">
                                                             <b>
-                                                            <ion-icon class="text-2xl" style="color:#03A9F4; font-weight:bolder; padding-left: 6vw;" name="checkmark-outline"></ion-icon>
+                                                            <ion-icon class="text-2xl" style="color:#03A9F4; font-weight:bolder; padding-left: 9vw;" name="checkmark-outline"></ion-icon>
 
                                                             </b>
                                                             <span class="text-sm"></span>
@@ -126,7 +101,7 @@
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon class="text-2xl" style="padding-left: 6vw;" name="ellipsis-vertical"></ion-icon>
+                                                            <ion-icon class="text-2xl" style="padding-left: 9vw;" name="ellipsis-vertical"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
