--- a/views/front/myprofile.ejs
+++ b/views/front/myprofile.ejs
@@ -24,7 +24,7 @@
                         </tr>
                     </table>
                     
-                    Ad Soyad
+                    <span style="text-transform: capitalize;"><%= kisi.item.name %> </span>
                     
                     <br>
                     <small>233 Abone</small><br>
@@ -40,10 +40,6 @@
                         </ul>
                     </nav>
                 </div>
-
             </div>
-
-            
-
         </div>
     </div>
