--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -1,4 +1,4 @@
-<% layout("layout") %>
+<% layout("../layout") %>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
@@ -16,7 +16,7 @@
         integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
         crossorigin="anonymous" />
 
-    <%- include ./part/header2.ejs %> 
+    <%- include ../part/header2.ejs %> 
 
     <div class="main_content">
         <div class="container">
