--- a/views/front/magaza/magaza.ejs
+++ b/views/front/magaza/magaza.ejs
@@ -1,6 +1,5 @@
-<% layout("layout") %>
-<%- include ./part/header2.ejs %> 
-
+<% layout("../layout") %>
+<%- include ../part/header2.ejs %> 
     <div class="main_content">
         <div class="mcontainer">
             <div style="overflow: auto; white-space: nowrap; margin-top: -24px;">
