--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -38,7 +38,7 @@
                     <div class="p-4 space-y-3">
                         
                         <div class=" py-4 space-y-4 dark:border-" style="width: 100%;">
-                            <% konu.comment.forEach(element=> { %>
+                            <% yorum.forEach(element=> { %>
                                 <div style="display: flex; flex-direction: row;">
                                     <div style="flex:8">
                                         <a href="/profil/<%= element.user._id %>"><img src="<%= element.user.photo %>"
