--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -104,7 +104,7 @@
                 }).then(response => {
                     if (response.data.status == true) {
                         this.yyy = true
-                        setInterval(() => {
+                        setTimeout(() => {
                             window.location.reload()
                         }, 1000);
                     } else {
