--- a/views/front/magaza/magazaic.ejs
+++ b/views/front/magaza/magazaic.ejs
@@ -1,5 +1,5 @@
-<% layout("layout") %>
-<%- include ./part/header2.ejs %> 
+<% layout("../layout") %>
+<%- include ../part/header2.ejs %> 
 
     <div class="main_content">
         <div class="mcontainer">
